update io、stream、spi、threadlocal code